# la-lettre-dans-le-guidon

./: .gitignore  README.md  index.html
backend/: Dockerfile  pyproject.toml
backend/lldlg/: manage.py
backend/lldlg/lldlg/: asgi.py  settings.py  urls.py  wsgi.py
docker/: .env  docker-compose.yml
front/: .eslintrc.json  .gitignore  index.html  package-lock.json  package.json  vite.config.js
front/.github/workflows/: code-quality.yml
front/src/: App.jsx  App.test.jsx  main.jsx
iteration-1-Front-Vite/la-lettre-dans-le-guidon/: .eslintignore  .eslintrc.cjs  .eslintrc.json  package-lock.json  package.json  tailwind.config.js  vite.config.js
iteration-1-Front-Vite/la-lettre-dans-le-guidon/src/: App.jsx  App.test.jsx  index.css  main.jsx
