[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["Romain Pesche <romain@pesche.fr>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
djangorestframework = "^3.14.0"
django = "^4.2.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
